# Portfolio-optimizer

./: LICENSE  README.md  S&P 500 constituents historical data.py  S&p 500 Historical Data.py  SP500_Historical_Data.csv  Yahoo finance stocks optimizer.py  pyproject.toml
src/: Data.py.py
src/analytics/: drawdown.py  ratio.py  statistics.py
src/data/: Data.py  benchmark.py  data.py  return.py  returns.py  volatility.py
src/optimization_function/: optimization_function.py
src/portfolio_models/: mean_variance.py
test/: Benchmark Data.py  data_scratch.py  test.py
